--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 <body>
     <header>
         <h1>B.Online Teacher</h1>
+        
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Background Image Example</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-image: url('/storage/emulated/0/Html/html/pexels-photo-917300.jpeg;')
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
+        }
+    </style>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+</body>
+</html>
+
+        
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
