--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('/storage/emulated/0/Html/html/pexels-photo-917300.jpeg;')
+            background-image: url('pexels-photo-917300.jpegjpeg')
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
