--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
         }
     </style>
 </head>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embed YouTube Video</title>
+</head>
+<body>
+    <h1>My YouTube Video</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2h6CaHr02eg?si=hfJqIc10ULNJsvV1" "frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</body>
+</html>
+
 <body>
     <h1>Welcome to My Website</h1>
 </body>
